--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "yiisoft/yii2": ">=2.0.5",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
-        "kartik-v/yii2-icons": "*"
+        "kartik-v/yii2-icons": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
