--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
         "yiisoft/yii2": ">=2.0.5",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
+        "kartik-v/yii2-krajee-base": "dev-master",
+        "kartik-v/yii2-widgets": "dev-master",
         "kartik-v/yii2-icons": "dev-master"
     },
     "require-dev": {
