--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "kartik-v/yii2-krajee-base": "dev-master",
         "kartik-v/yii2-widgets": "dev-master",
         "kartik-v/yii2-icons": "dev-master",
-        "kartik-v/yii2-helpers": "dev-master"
+        "kartik-v/yii2-helpers": "dev-master",
+        "dektrium/yii2-user": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
